# Telequity

./: .env.example  .gitignore  README.md  RUN_FULL.md  SETUP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
data/processed/: dim_category_DEMO.csv  dim_county_DEMO.csv  fact_complaint_category_DEMO.csv  fact_county_DEMO.csv  fact_data_center_DEMO.csv
data/reference/: README.md  us_county_fips.csv
powerbi/: POWERBI_GUIDE.md  data_dictionary.md
scripts/: run_texas_pilot.py
src/telequity/: __init__.py  analysis.py  config.py  demo.py  pipeline.py  utils.py
src/telequity/ingest/: __init__.py  broadband.py  census_acs.py  data_centers.py  fcc_complaints.py  fetch_reference.py  water.py
src/telequity/model/: __init__.py  build_gold.py
src/telequity/score/: __init__.py  index.py  mismatch.py
src/telequity/transform/: __init__.py  acs.py  broadband.py  complaints.py  geography.py  infrastructure.py
tests/: test_analysis.py  test_broadband.py  test_broadband_summary.py  test_config_modes.py  test_data_centers.py  test_geography.py  test_gold.py  test_pipeline_demo.py  test_score.py
web/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.js.timestamp-1782783439478-8b1cfb6ab1013.mjs  vitest.config.js  vitest.config.js.timestamp-1783392434486-d17516c2b5b7a.mjs
web/public/: analysis.json
web/server/: .env.example  index.js  package-lock.json  package.json  powerbi.js
web/src/: App.jsx  api.js  api.test.js  config.js  config.test.js  styles.css
(+9 files in other folders)
